[package]
name = "snn-rust"
version = "0.1.0"
edition = "2021"
authors = ["Kidan Nelson nelsonkidan@gmail.com"]
description = "A Rust library for implementing spike neural networks."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
ndarray = "0.15.6"

[lib]
name = "snn_rust"
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "basic"
path = "examples/basic.rs"